2006-05-13  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in: Add defines for missing symbols: HAVE_WINSOCK2_H
	and HAVE_WS2TCPIP_H. Add #undef statements and comments for other
	missing tokens found in the ../config.h.in file.
	* config.h.in, config.h, stamp-chi: Regenerated.
	
	* stamp-chi, stdint.h: Regenerated.

	* config.h.in.footer: Add #define OK_TO_USE_1S_CLOCK to restore
	the ability to compile gettime.c.
	* config.h.in, config.h: Ditto.
	
2006-03-30  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Regenerated.

2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in, config.h, config.h.in, stamp-chi: Regenerated.

2006-01-25  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h, stdbool.h: Update from GNULIB.

2005-12-31  Mark D. Baushke  <mdb@gnu.org>

	* config.h.in.in: Add #undef missing symbols found by mkconfig.pl
	(HAVE_COMPOUND_LITERALS, HAVE_DECL_FREEADDRINFO,
	HAVE_DECL_GAI_STRERROR, HAVE_DECL_GETADDRINFO, HAVE_FDOPENDIR,
	HAVE_NETINET_IN_H, HAVE_STRUCT_ADDRINFO, re_comp,
	re_compile_fastmap, re_compile_pattern, re_exec, re_match,
	re_match_2, re_search, re_search_2, re_set_registers,
	re_set_syntax, re_syntax_options, regcomp, regerror, regexec,
	regfree, socklen_t).

2005-12-07  Mark D. Baushke  <mdb@gnu.org>

	* stdint.h: Update from GNULIB.

2005-09-30  Conrad T. Pino  <Conrad@Pino.com>

	* woe32.c woe32.h: Add "woe32_fd_select" function.

2005-09-29  Conrad T. Pino  <Conrad@Pino.com>

	* run.c:  Add "bool fix_stderr" argument to "piped_child" function.
	Add "false" to "piped_child" call in "run_piped" function.

2005-09-26  Conrad T. Pino  <Conrad@Pino.com>

	* config.h.in.footer: Extend "mbsinit" Visual C++ 6.0 implementation
	to add Visual C++ 5.0, Visual C++ .NET, Visual C++ .NET 2003.

	* config.h config.h.in stamp-chi: Regenerated on UNIX.

2005-09-26  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add unistd.c, woe32.h.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new files.
