@@ -1,3 +1,8 @@
+2006-05-14  Mark D. Baushke  <mdb@gnu.org>
+
+	* filesubr.c (isdir, islink, isreadable, isaccessible): Return bool.
+	(xchmod): Second argument is bool.
+
 2006-05-13  Mark D. Baushke  <mdb@gnu.org>
 
 	* config.h.in.in: Add defines for missing symbols: HAVE_WINSOCK2_H
